# salon-des-inventions

./: .gitignore  Dockerfile  README.md  compose.yaml  index.html  pyproject.toml
crx/: README.md
esp32/: boot.py  conf.py  main.py
src/salon/: chatbot.py  config.py  led_api.py  main.py
src/salon/anothertube/: __init__.py  https.py  search.py  video_data.py
src/salon/apis/: led.py  youtube.py
src/salon/chat/: chatbot.py  main.py  prompts.py  test_rate.py
src/salon/chat/api/: led.py  youtube.py
src/salon/chat/led/: led_api.py  led_models.py  led_tool.py
src/salon/chat/youtube/: sound_api.py  yt_models.py  yt_tool.py
src/salon/chatbot/: chatbot.py  config.py  prompts.py
src/salon/chatbot/apis/: youtube.py
src/salon/sound/: main.py  models.py  player.py
