[project]
name = "salon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Thibault Viglino", email = "thibault@thvi.ch" }]
dependencies = [
    "langchain>=0.3.7",
    "langgraph>=0.2.53",
    "langchain-openai>=0.2.9",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python -m salon"

[tool.pdm.dev-dependencies]
dev = ["salon @ file:///${PROJECT_ROOT}/"]
