[project]
name = "salon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Thibault Viglino", email = "thibault@thvi.ch" }]
dependencies = [
    "langchain>=0.3.7",
    "langgraph>=0.2.53",
    "langchain-openai>=0.2.9",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
    "gradio>=5.6.0",
    "selenium>=4.27.1",
    "httpx>=0.28.0",
    "openai==1.55.3",
    "aiotube>=1.7.2",
    "aiomqtt>=2.3.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python -m salon"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=salon",
]

[dependency-groups]
dev = [
    "setuptools>=75.6.0",
]
